--- a/index.html
+++ b/index.html
@@ -11,13 +11,20 @@
     var game = new Phaser.Game(480, 320, Phaser.CANVAS, null, {
       preload: preload, create: create, update: update
     });
+
+    var ball; 
+
     function preload() {
         game.scale.scaleMode = Phaser.ScaleManager.SHOW_ALL;
         game.scale.pageAlignHorizontally = true;
         game.scale.pageAlignVertically = true;
         game.stage.backgroundColor = '#F0E68C';
+
+        game.load.image('ball', 'assets/ball.png');
     }
-    function create() {}
+    function create() {
+        ball = game.add.sprite(50, 50, 'ball');
+    }
     function update() {}
 </script>
 </body>
