--- a/index.html
+++ b/index.html
@@ -23,9 +23,15 @@
         game.load.image('ball', 'assets/ball.png');
     }
     function create() {
+        game.physics.startSystem(Phaser.Physics.ARCADE);
         ball = game.add.sprite(50, 50, 'ball');
+        game.physics.enable(ball, Phaser.Physics.ARCADE);
+        ball.body.collideWorldBounds = true;
+        ball.body.bounce.set(1);
+        ball.body.velocity.set(150,150);
     }
-    function update() {}
+    function update() {
+    }
 </script>
 </body>
 </html>
