--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     });
 
     var ball; 
+    var paddle;
+
 
     function preload() {
         game.scale.scaleMode = Phaser.ScaleManager.SHOW_ALL;
@@ -21,16 +23,33 @@
         game.stage.backgroundColor = '#F0E68C';
 
         game.load.image('ball', 'assets/ball.png');
+        game.load.image('paddle', 'assets/paddle.png');
     }
     function create() {
         game.physics.startSystem(Phaser.Physics.ARCADE);
-        ball = game.add.sprite(50, 50, 'ball');
+
+        ball = game.add.sprite(game.world.width*0.5, game.world.height-25, 'ball');
+        ball.anchor.set(0.5);
         game.physics.enable(ball, Phaser.Physics.ARCADE);
         ball.body.collideWorldBounds = true;
         ball.body.bounce.set(1);
-        ball.body.velocity.set(150,150);
+        ball.body.velocity.set(150,-150);
+
+        game.physics.arcade.checkCollision.down = false;
+        ball.checkWorldBounds = true;
+        ball.events.onOutOfBounds.add(() => {
+            alert('Game over :(');
+            location.reload();
+        })
+
+        paddle = game.add.sprite(game.world.width*0.6, game.world.height-5, 'paddle');
+        paddle.anchor.set(0.5,1);
+        game.physics.enable(paddle, Phaser.Physics.ARCADE);
+        paddle.body.immovable = true;
     }
     function update() {
+        game.physics.arcade.collide(ball, paddle);
+        paddle.x = game.input.x || game.world.width*0.5;
     }
 </script>
 </body>
