--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
     function onHitBrick(ball,brick) {
         var killTween = game.add.tween(brick.scale);
         killTween.to({x:0,y:0}, 200, Phaser.Easing.Linear.None);
-        killTween.onComplete.addOnce(function() {
+        killTween.onComplete.addOnce(function(){
             brick.kill();
         }, this);
-        killTween.start;
+        killTween.start();
         score += 10;
         scoreText.setText('Punkte: '+score);
 
