--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
 
     function onHitPaddle(ball, paddle) {
         ball.animations.play('wobble');
+        ball.body.velocity.x = -1 * 5 * (paddle.x - ball.x);
     }
 
     function ballLeavesScreen() {
